# dipole-utils

./: .gitignore  README.md  pyproject.toml  pytest.ini  run_tests.py
dipoleutils/: __init__.py
dipoleutils/data/: a_team_sources.json
dipoleutils/models/: default_priors.py  dipole.py  model_helpers.py  multipole.py  priors.py
dipoleutils/utils/: __init__.py  constants.py  coordinate_parser.py  crossmatch.py  data_loader.py  file_names.py  inference.py  mask.py  math.py  physics.py  plotting.py  posterior.py  samples.py  tools.py  weather.py
scripts/: getdist_showcase.py  gleam.py  individual_maps.py  jordan_maps.py  low3.py  low3_mean_flux_vs_temperature.py  low3_plot_helpers.py  make_racs_nvss_samples.py  racs_low2.py  racs_low2_convolved.py  racs_mid_params.py  racs_nvss_comparison.py  racs_nvss_crossmatch.py  racs_nvss_overlap.py  racs_xmatch.py
tests/: test_coordinate_parser.py  test_crossmatch_integration.py  test_crossmatch_unit.py  test_data_loader_integration.py  test_data_loader_unit.py  test_dipole_integration.py  test_dipole_unit.py  test_external_drive_independence.py  test_mask_integration.py  test_mask_unit.py  test_multipole_integration.py  test_samples.py  test_weather_unit.py
